# vlcrm

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.sh  crossbuild.sh  main.c
.github/workflows/: build.yml  linux.yml
lib/trashcan/: CMakeLists.txt  trashcan.c
toolchains/: macos-arm64.cmake  macos-intel64.cmake  macos.cmake  mingw-w64.cmake  mingw-win32.cmake  mingw-win64.cmake
